--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ version: "3"
 # Docker-compose: идеальное рабочее окружение https://habr.com/ru/post/346086/
 
 networks:
-  app-tier:
+  mycic_network:
     driver: bridge
 
 services:
@@ -12,6 +12,12 @@ services:
     image: redis:latest
     container_name: mycic_redis
     hostname: redis.docker
+
+    ports:
+      - "6379:6379"
+
+    networks:
+      - mycic_network
 
   mycic_php:
     build:
@@ -35,7 +41,7 @@ services:
       - mycic_db
 
     networks:
-      - app-tier
+      - mycic_network
 
   # mycic_frontend_builder:
   #   container_name: mycic_frontend_builder
@@ -63,7 +69,7 @@ services:
      - mycic_db
 
     networks:
-      - app-tier
+      - mycic_network
 
   mycic_db:
     image: mysql:latest
@@ -82,7 +88,7 @@ services:
       - "33060:3306"
 
     networks:
-      - app-tier
+      - mycic_network
 
 # TODO Add Node image that builds frontend in watch-mode
 # +TODO Add MySQL
