--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
 
     volumes:
       - .:/app
+      - ./vendor:/app/vendor
       - ./.docker/php/supervisord:/etc/supervisor
       - ./.docker/logs/supervisord:/logs/supervisor
 
@@ -42,15 +43,16 @@ services:
     networks:
       - mycic_network
 
-  # mycic_frontend_builder:
-  #   image: node:latest
-  #   container_name: mycic_frontend_builder
-  #   build:
-  #     context: ./.docker/frontend
-  #
-  #   volumes:
-  #     - .:/app
-  #     - ./node_modules
+  mycic_frontend_builder:
+    image: node:latest
+    container_name: mycic_frontend_builder
+    build:
+      context: .
+      dockerfile: ./.docker/frontend/Dockerfile
+
+    volumes:
+      - .:/app
+      - ./node_modules:/app/node_modules
 
   mycic_nginx:
     image: nginx:latest
