--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "sass": "^1.29.0",
     "sass-loader": "^7.1.0",
     "typescript": "^4.2.3",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.12",
+    "webpackbar": "^5.0.0-3"
   },
   "dependencies": {
     "@chenfengyuan/vue-countdown": "^1.1.5",
