--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,3 @@
-image: php:7.2
-
 services:
   - mysql:5.7
 
@@ -26,6 +24,7 @@ before_script:
   - php -i
 
 composer:
+  image: php:7.2
   stage: build
   script:
     - wget https://getcomposer.org/composer.phar -O ./composer.phar
@@ -45,12 +44,14 @@ composer:
       - node_modules/
 
 build:
+  image: node:latest
   stage: build
   script:
     - npm i
     - npm run dev
 
 phpunit:
+  image: php:7.2
   stage: test
   dependencies:
     - composer
