--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,18 +13,8 @@ variables:
   DB_USERNAME: root
   DB_PASSWORD: secret
 
-before_script:
-  - apt-get update
-  - apt-get install -y libxml2-dev wget zlib1g-dev libwebp-dev libjpeg62-turbo-dev libpng-dev libxpm-dev libfreetype6-dev
-  - docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-png-dir=/usr/include/
-  - docker-php-ext-install xml soap zip gd
-  - docker-php-ext-install mysql && docker-php-ext-enable mysql
-  - apt-get clean
-  - php -v
-  - php -i
-
 composer:
-  image: php:7.2
+  image: registry-backend.cic.kz/centras/php-fpm:7.2
   stage: build
   tags:
     - mycic
@@ -55,7 +45,7 @@ build:
     - npm run dev
 
 phpunit:
-  image: php:7.2
+  image: registry-backend.cic.kz/centras/php-fpm:7.2
   stage: test
   tags:
     - mycic
