--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,7 +56,7 @@ phpunit:
   dependencies:
     - composer
   script:
-    - source .env.testing && php artisan migrate -v
-    - source .env.testing && phpunit --coverage-text --colors=never
+    - cp .env.testing .env && php artisan migrate -v
+    - cp .env.testing .env && phpunit --coverage-text --colors=never
 
 ####
