--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ services:
   - mysql:5.7
 
 variables:
-  MYSQL_ROOT_PASSWORD: password
+  MYSQL_ROOT_PASSWORD: secret
   MYSQL_DATABASE: my_cic_test
   MYSQL_ROOT_HOST: mysql
   MYSQL_USER: user
