--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,15 +48,16 @@ build:
     - npm i
     - npm run dev
 
-phpunit:
-  image: registry-backend.cic.kz/centras/php-fpm:7.2
-  stage: test
-  tags:
-    - mycic
-  dependencies:
-    - composer
-  script:
-    - cp .env.testing .env && php artisan migrate -v
-    - cp .env.testing .env && phpunit --coverage-text --colors=never
+# TODO Временно отключено за ненадобностью
+# phpunit:
+#   image: registry-backend.cic.kz/centras/php-fpm:7.2
+#   stage: test
+#   tags:
+#     - mycic
+#   dependencies:
+#     - composer
+#   script:
+#     - cp .env.testing .env && php artisan migrate -v
+#     - cp .env.testing .env && phpunit --coverage-text --colors=never
 
 ####
