--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
-        "pusher/pusher-php-server": "^4.0"
+        "pusher/pusher-php-server": "^4.0",
+        "yajra/laravel-oci8": "^6"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
