--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:juSc87f5zebf4AmGRUu7KXqN7yrXo+uCh86/cK3tbyc=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -42,3 +42,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+KIAS_MOCK_ENABLED=true
+KIAS_MOCK_DELAY=0
