--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,6 +59,7 @@ phpunit:
   #   - composer
   script:
     # - wget https://getcomposer.org/composer.phar -O ./composer.phar
+    - ping repo.packagist.org -c 4
     - php composer.phar update
     - php composer.phar dump-autoload
     - cp .env.testing .env
@@ -116,3 +117,4 @@ build-docker:
     docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     docker build --cache-from $CI_REGISTRY_IMAGE:master --tag $CI_REGISTRY_IMAGE:master .
     docker push $CI_REGISTRY_IMAGE:master
+    docker rmi $CI_REGISTRY_IMAGE:master
