--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
 services:
   - mysql:5.7
 
-image: php:7.3
+image: registry-backend.cic.kz/centras/php-fpm:7.2
 
 before_script:
   - ping repo.packagist.org -c 4
