--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,13 +7,13 @@ stages:
 services:
   - mysql:5.7
 
-image: registry-backend.cic.kz/centras/php-fpm:7.2
+image: php:7.2
 
 before_script:
   - ping repo.packagist.org -c 4
-  - curl -sS https://getcomposer.org/installer | php
-  - php composer.phar install
+  - wget https://getcomposer.org/composer.phar -O ./composer.phar
   - docker-php-ext-install pdo_mysql
+  - php composer.phar install
   - cp .env.testing .env
   - php artisan key:generate --env=testing
   - php artisan migrate -v --env=testing
