--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,12 +21,12 @@ before_script:
 variables:
   MYSQL_ROOT_PASSWORD: secret
   MYSQL_DATABASE: my_cic_test
-  MYSQL_ROOT_HOST: localhost
+  MYSQL_ROOT_HOST: mysql
   MYSQL_USER: user
   MYSQL_PASSWORD: secret
 
   DB_DATABASE: my_cic_test
-  DB_HOST: localhost
+  DB_HOST: mysql
   DB_USERNAME: root
   DB_PASSWORD: secret
 
