--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -96,6 +96,8 @@ build-docker:
   stage: docker
   only:
     - colleagues
+  tags:
+    - mycic
   # https://www.cloudsigma.com/deploying-laravel-nginx-and-mysql-with-docker-compose/
   script: |
     docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
