--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
         "pusher/pusher-php-server": "^4.0",
-        "simplesoftwareio/simple-qrcode": "^4.2"
+        "simplesoftwareio/simple-qrcode": "^4.2",
+        "yajra/laravel-oci8": "^6.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
